<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layout_marginTop="56dp"
    tools:context="in.djtrinity.www.trinity.ContactDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/number"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingEnd="8dp"
                    android:paddingRight="8dp"
                    android:text=" +91 9987873331"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="Email: "
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingEnd="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/email_id"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/address_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="Address: "
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/address_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/address_main"
                    android:fontFamily="sans-serif-light"
                    android:paddingEnd="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/address"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autoLink="web"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/add"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/instagram"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="openInstagram"
                android:src="@drawable/instagram" />

            <ImageButton
                android:id="@+id/facebook"
                android:layout_width="0dp"
                android:layout_height="69dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="openFacebook"
                android:src="@drawable/ic_square_facebook_69" />

            <ImageButton
                android:id="@+id/twitter"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="openTwitter"
                android:src="@drawable/logo_twitter_75x75" />

            <ImageButton
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/snapchat"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:onClick="openSnap"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/snapchat_logo"
                android:background="@android:color/transparent"
                android:layout_height="75dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/navigate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_text"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:onClick="navigateToDJ"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="Navigate"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

</ScrollView>

